[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Settings.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/upheavtt.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 112
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="Animation" id=8]
resource_name = "Def"
length = 12.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -10, -0.25, 0, 0.25, 0, 10, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, -10, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 4, 8, 12 )
}

[node name="Settings" type="Node2D"]
position = Vector2( 0, 4.831 )
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 165.593
margin_top = 63.2673
margin_right = 686.593
margin_bottom = 164.268
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = SubResource( 1 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="Label" parent="."]
margin_left = 190.755
margin_top = 170.807
margin_right = 337.755
margin_bottom = 214.807
custom_fonts/font = SubResource( 2 )
text = "Music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Music"]
margin_left = 214.763
margin_top = 3.7627
margin_right = 303.763
margin_bottom = 47.7627
custom_fonts/font = SubResource( 2 )
text = "Yes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="More" type="Button" parent="Music"]
margin_left = 305.319
margin_top = 3.25054
margin_right = 327.319
margin_bottom = 47.2505
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 2 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Down" type="Button" parent="Music"]
margin_left = 187.702
margin_top = 3.25052
margin_right = 209.702
margin_bottom = 47.2505
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 2 )
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sfx" type="Label" parent="."]
margin_left = 226.365
margin_top = 228.993
margin_right = 313.365
margin_bottom = 272.993
custom_fonts/font = SubResource( 2 )
text = "Sfx"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sfx"]
margin_left = 181.0
margin_top = 4.0
margin_right = 270.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
text = "Yes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Up" type="Button" parent="Sfx"]
margin_left = 273.455
margin_top = 3.49832
margin_right = 295.455
margin_bottom = 47.4983
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 2 )
action_mode = 0
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Less" type="Button" parent="Sfx"]
margin_left = 158.559
margin_top = 2.00003
margin_right = 180.559
margin_bottom = 46.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 2 )
action_mode = 0
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Language" type="Button" parent="."]
margin_left = 138.314
margin_top = 310.15
margin_right = 597.314
margin_bottom = 354.15
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 2 )
text = "Language: english"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteData" type="Button" parent="."]
margin_left = 234.206
margin_top = 385.065
margin_right = 506.206
margin_bottom = 429.065
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 2 )
text = "Reset Data"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
margin_left = 26.9695
margin_top = 14.9831
margin_right = 144.97
margin_bottom = 58.9831
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 2 )
text = "BAck"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Def"
anims/Def = SubResource( 8 )

[connection signal="button_down" from="Music/More" to="." method="_on_More_pressed"]
[connection signal="button_down" from="Music/Down" to="." method="_on_Down_pressed"]
[connection signal="pressed" from="Sfx/Up" to="." method="_on_Up_pressed"]
[connection signal="pressed" from="Sfx/Less" to="." method="_on_Less_pressed"]
[connection signal="pressed" from="DeleteData" to="." method="_on_DeleteData_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
